--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14,6 +14,9 @@
     min-height:100%;
     background: url(../img/comppattern2.png);
 }
+ul, li{
+	list-style:none;
+}
 /*--------------CLEAR FIX---------------*/
 .clearfix:before,
 .clearfix:after {
