--- a/app/css/nav&cont.css
+++ b/app/css/nav&cont.css
@@ -1,11 +1,15 @@
 /*----------------НАВИГАЦИЯ--------------*/
 .navigation {
+    margin-top:2px;
+    padding:0;
     width: 250px;
     float:left;
     /* для IE6-7 */
 }
 .menu{
-    margin-bottom:21px;
+    padding:0;
+    margin:0;
+    margin-bottom:19px;
 }
 .menu-about, .menu-work, .menu-cont {
     width: 213px;
@@ -68,6 +72,7 @@
 }
 /*---------------МЕНЮ КОНТАКТОВ----------*/
 .contact-menu {
+    padding:0;
     width:251px;
 }
 .cont {
