На сдачу Первой части

--- a/app/css/content.css
+++ b/app/css/content.css
@@ -29,13 +29,14 @@
     font-weight:normal;
     font-style:normal;
     font-size:27px;
-    height:46px;
     width:320px;
-    padding:21px 0 0 22px;
+    padding:21px 0 19px 22px;
     border-bottom:2px solid #3ba8c0;
     margin-bottom:22px;
 }
-
+.wrap-title{
+    height:100%;
+}
 .main-image {
     border-radius: 100%;
     width: 140px;
@@ -59,12 +60,31 @@
     padding-bottom:17px;
 }
 .skill{
-    margin-left:18px;
     width:200px;
     float:left;
+    padding-left:16px;
 }
-.skills{
-    padding:1px 2px 5px 2px;
+.skills-list{
+    padding:0;
+}
+.skills-list-item{
+    display:inline-block;
+    background-image:
+    -moz-linear-gradient(bottom, #2E8CA2 0%, #2E8CA2 52%, #3BA8C0 53%, #3BA8C0 100%);
+    background-image:
+    -o-linear-gradient(bottom, #2E8CA2 0%, #2E8CA2 52%, #3BA8C0 53%, #3BA8C0 100%);
+    background-image:-webkit-linear-gradient(bottom, #2E8CA2 0%, #2E8CA2 52%, #3BA8C0 53%, #3BA8C0 100%);
+    background-image:linear-gradient(to top, #2E8CA2 0%, #2E8CA2 52%, #3BA8C0 53%, #3BA8C0 100%);
+    border-radius:2px;
+    color:#FFF;
+    font-family:"proxima_nova_cond_semibold";
+    font-size:14px;
+    text-align:center;
+    padding:0 12px 0 12px;
+    margin-bottom:3px;
+    margin-left:5px;
+    margin-top:4px;
+    line-height:19px;
 }
 .term{
     font-size: 15px;
@@ -173,6 +193,155 @@
 .link-in-jobs{
     text-decoration:none;
 }
+.my-jobs-item-add{
+    background:transparent;
+    border:none;
+    outline:none;
+}
+/*-------------ADD NEW PROJECT------*/
+.popup{
+    width:362px;
+    background: #eff3f7;
+    border-radius:5px 5px 5px 5px;
+}
+.popup-head{
+    margin:0;
+    background:#48cbe8;
+    padding:12px 17px 15px 14px;
+    position:relative; 
+    overflow:hidden;
+}
+.popup-head:after{
+    content:"";
+    background: #67dffa;
+    height:9px;
+    width:362px;
+    position:absolute;
+    bottom:0;
+    display:table;
+    clear:both;
+    margin-left:-14px;
+}
+.popup-title{
+    margin:0;
+    color: #FFF;
+    font-family:'fira_sansregular';
+    font-weight:normal;
+    font-style:normal;
+    font-size:25px;
+    float:left;
+}
+.close-popup{
+    background:transparent;
+    border:none;
+    outline:none;
+    width:25px;
+    height:25px;
+    padding-left:60px;
+}
+.popup-text-font{
+    margin:0;
+    padding:6px 0 6px 21px;
+    font-family:'fira_sansbook';
+    font-size:17px;
+    color:#9ca1ae;
+    margin-left:-1px;
+}
+.popup-input{
+    margin-left:21px;
+    width:314px;
+    height:37px;
+    border: 1px solid #48cbe8; 
+    border-radius: 3px 3px;
+    font-family:'fira_sanslight';
+    color:#48cbe8; 
+    font-size:13px;
+}
+.popup-textarea{
+   margin-left:21px;
+   width:314px;
+   height:105px;
+   border:1px solid #48cbe8; 
+   border-radius: 3px 3px;
+   font-family:'fira_sanslight';
+   font-size:13px;
+   resize:none;
+}
+
+.popup-submit-one{
+  margin:8px 0 0 111px;
+  float:left;
+  padding:2px;
+  height:40px;
+  width:140px;
+  border:none;
+  outline:none;
+  font-family:'fira_sansbook';
+  font-size:19px;
+  color:white;
+  background:url(../img/submit-project.png) no-repeat center; 
+  margin-top:3px;
+}
+.popup-submit-one:hover{
+    background:url(../img/submit-project-hover.png) no-repeat center;
+}
+.popup-button{
+    padding-bottom:60px;
+}
+/*-------------FILE UPLOAD----------*/
+.file_upload{
+    width:314px;
+    margin-left:21px;
+    display: block;
+    position: relative;
+    overflow: hidden;
+    font-size: 1em;             
+    height: 40px;                 
+    line-height: 2.5em             
+}
+.file_upload .button, .file_upload > .mark-text{
+    display: block;
+    cursor: pointer            
+}
+.button{
+    text-indent:-9999px;
+}
+.file_upload .button{
+    float: right;
+    width: 49px;                 
+    height: 100%;          
+}
+.file_upload > mark{
+    background: #FFF;     
+    padding-left: 1em;          
+}
+
+.file_upload input[type=file]{
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    width:1px;
+    height:1px;
+}
+.file_upload{
+    border: 1px solid #48cbe8;
+    border-radius: 3px;
+}
+.file_upload .button{
+    background:url(../img/add-file.png) no-repeat;
+}
+.file_upload:hover .button{
+    background:url(../img/add-file.png) no-repeat;
+}
+.mark-text{
+    color:#48cbe8;
+    font-family:'fira_sansbook';
+    font-size:13px;
+    margin-left:-4px;
+}
+#pop-it-up{
+display:none;
+}
 /*---------------CONTACT FORM-------------*/
 .cont-title{
     margin:0;
@@ -199,7 +368,7 @@
 .form{
     width:402px;
     margin:48px auto;
-    padding-bottom:122px;
+    padding-bottom:128px;
 }
 .yourname{
     width:210px;
@@ -249,9 +418,6 @@
     float:left;
     padding-bottom:21px;
 }
-.captcha-code{
-    
-}
 .captcha-input{
     margin:21px 0 0 19px;
     width:190px;
@@ -269,31 +435,34 @@
   float:left;
   padding:2px;
   width:140px;
+  height:40px;
   border:none;
+  outline:none;
   font-family:'fira_sansbook';
   font-size:19px;
   color:white;
-  background:url(../img/submit-one.png) no-repeat;  
+  background:url(../img/submit-one.png) no-repeat center;  
 }
 .submit-two{
   float:right;
   margin-right:-2px;
   width:128px;
+  height:40px;
   border:none;
+  outline:none;
   font-family:'fira_sansbook';
   font-size:19px;
   color:white;
-  background:url(../img/submit-two.png) no-repeat; 
+  background:url(../img/submit-two.png) no-repeat center; 
 
 }
 .submit-one:hover{
     background:url(../img/submit-one-hover.png) no-repeat;
-    padding:3px;
+    margin-top:3px;
 }
 .submit-two:hover{
     background:url(../img/submit-two-hover.png) no-repeat;
-
-    padding:3px;
+    margin-top:3px;
 }
 /*-----------PLACEHOLDER-------------*/
 .input::-webkit-input-placeholder, .captcha-input::-webkit-input-placeholder{
@@ -304,12 +473,28 @@
     color:#48cbe8; 
     padding-left:8px;
 }
+.popup-input::-webkit-input-placeholder, .captcha-input::-webkit-input-placeholder{
+    color:#48cbe8;
+    padding-left:8px;
+}
+.popup-input:-moz-placeholder, .captcha-input:-moz-placeholder{
+    color:#48cbe8; 
+    padding-left:8px;
+}
 .textarea::-webkit-input-placeholder{
     color:#48cbe8;
-    padding:7px 0 0 7px;
+    padding:11px 0 0 7px;
 }
 .textarea:-moz-placeholder{
     color:#48cbe8; 
-    padding:7px 0 0 7px;
+    padding:11px 0 0 7px;
+}
+.popup-textarea::-webkit-input-placeholder{
+    color:#48cbe8;
+    padding:11px 0 0 7px;
+}
+.popup-textarea:-moz-placeholder{
+    color:#48cbe8; 
+    padding:11px 0 0 7px;
 }
 /*----------------END CONTENT---------------*/
