--- a/app/css/header.css
+++ b/app/css/header.css
@@ -25,34 +25,43 @@
     clear:both;
 }
 .vk, .twit, .face, .git{
-    display:block;
+    display:block;  
+    width:50px;
     height:50px;
-    width:50px;  
     text-indent:-9999px;
+    transition:linear 0.1s;
 }
 .vk {
-    background:url(../img/vklogo.png) no-repeat;
+    background:url(../img/social.png) no-repeat;
+    background-position:0 -48px;
 }
 .vk:hover {
-    background:url(../img/vkhover.png) no-repeat;
+    background:url(../img/social.png) no-repeat;
+    background-position:0 2px;
 }
 .twit {
-    background:url(../img/twitlogo.png) no-repeat;
+    background:url(../img/social.png) no-repeat;
+    background-position:-70px -48px;
 }
 .twit:hover {
-    background:url(../img/twhover.png) no-repeat;
+    background:url(../img/social.png) no-repeat;
+    background-position:-70px 2px;
 }
 .face {
-    background:url(../img/facelogo.png) no-repeat;
+    background:url(../img/social.png) no-repeat;
+    background-position:-140px -48px;
 }
 .face:hover {
-    background:url(../img/facehover.png) no-repeat;
+    background:url(../img/social.png) no-repeat;
+    background-position:-140px 2px;
 }
 .git {
-    background:url(../img/gitlogo.png) no-repeat;
+    background:url(../img/social.png) no-repeat;
+    background-position:-210px -48px;
 }
 .git:hover {
-    background:url(../img/githover.png) no-repeat;
+    background:url(../img/social.png) no-repeat;
+    background-position:-210px 2px;
 }
 .man{
     padding-top:7px;
@@ -62,6 +71,10 @@
     margin-left:14px;
     padding-top:7px;
     float:left;
+}
+.head-logo-text{
+    display:block;
+
 }
 .logos{
     padding:0;
