--- a/app/css/contacts.css
+++ b/app/css/contacts.css
@@ -68,6 +68,10 @@
    padding:10px 0 0 10px;
    color:#48cbe8; 
 }
+.error{
+  background: #fad6d4;
+  border:1px solid #f97e76;
+}
 .form-text-captcha{
    padding-bottom:4px;
    margin:14px 0 0 -2px;
@@ -112,6 +116,7 @@
 .submit-one:hover{
   background:#40B2CB;
   box-shadow: 0 0 0 rgb(0,0,0) inset;
+  padding-top:5px;
 }
 .submit-two{
   float:right;
@@ -130,4 +135,5 @@
 .submit-two:hover{
   background:#71869B;
   box-shadow: 0 0 0 rgb(0,0,0) inset;
+  padding-top:3px;
 }
