--- a/app/css/works.css
+++ b/app/css/works.css
@@ -146,6 +146,7 @@
 .popup-submit-one:hover{
   background:#40B2CB;
   box-shadow: 0 0 0 rgb(0,0,0) inset;
+  padding-top:3px;
 }
 .popup-button{
     padding-bottom:60px;
